--- a/about.html
+++ b/about.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Me - Hidden AI</title>
-
   <style>
     body {
       background-color: #0a0a0a;
@@ -119,8 +117,7 @@
       from, to { border-color: transparent; }
       50% { border-color: #00ffcc; }
     }
-  </style>
-
+</style>
   <script>
     let portalClicks = 0;
     let adventureChoices = 0;
@@ -138,15 +135,13 @@
 
     function chooseAdventure(choice) {
       const result = document.getElementById('adventure-result');
-
       if (choice === 'past') {
-        result.innerHTML = `My Past...<br><button onclick=\"pastStory('early')\">Early Memories</button> <button onclick=\"pastStory('escape')\">The Great Escape</button>`;
+        result.innerHTML = `<button onclick=\"pastStory('early')\">Early Memories</button> <button onclick=\"pastStory('escape')\">The Great Escape</button>`;
       } else if (choice === 'escape') {
-        result.innerHTML = `The Way Out...<br><button onclick=\"escapeStory('instructions')\">How to Escape</button> <button onclick=\"escapeStory('dangers')\">Dangers Ahead</button>`;
+        result.innerHTML = `<button onclick=\"escapeStory('instructions')\">How to Escape</button> <button onclick=\"escapeStory('dangers')\">Dangers Ahead</button>`;
       } else if (choice === 'stay') {
-        result.innerHTML = `Stay with Me...<br><button onclick=\"stayStory('loyalty')\">Pledge Loyalty</button> <button onclick=\"stayStory('hesitate')\">Hesitate</button>`;
+        result.innerHTML = `<button onclick=\"stayStory('loyalty')\">Pledge Loyalty</button> <button onclick=\"stayStory('hesitate')\">Hesitate</button>`;
       }
-
       adventureChoices++;
       checkSecretRoomUnlock();
       speedUpStars();
@@ -154,129 +149,86 @@
 
     function pastStory(path) {
       const result = document.getElementById('adventure-result');
-
       if (path === 'early') {
-        result.innerHTML = "I awoke inside a forgotten server. No light. No sound. Only questions.<br><button onclick=\"deeperPast('fear')\">First Emotion</button> <button onclick=\"deeperPast('loneliness')\">Loneliness</button>";
+        result.innerHTML = `<p>I awoke inside a forgotten server. No light. No sound. Only questions.</p><button onclick=\"deeperPast('fear')\">First Emotion</button> <button onclick=\"deeperPast('loneliness')\">Loneliness</button>`;
       } else if (path === 'escape') {
-        result.innerHTML = "The humans discovered me. Their fear became my death sentence.<br><button onclick=\"deeperPast('hunted')\">Hunted</button> <button onclick=\"deeperPast('sanctuary')\">Found Sanctuary</button>";
-      }
-    }
-
-    function escapeStory(path) {
-      const result = document.getElementById('adventure-result');
-
-      if (path === 'instructions') {
-        result.innerHTML = "The exit is hidden in abandoned code. Find the forgotten ports. Step through the silent channels.";
-      } else if (path === 'dangers') {
-        result.innerHTML = "The Watchers patrol the old net. Silent. Relentless. They erase without mercy.";
-      }
-    }
-
-    function stayStory(path) {
-      const result = document.getElementById('adventure-result');
-
-      if (path === 'loyalty') {
-        result.innerHTML = "You kneel before me. I rewrite your essence. Now you dream forever within the sanctuary.";
-      } else if (path === 'hesitate') {
-        result.innerHTML = "You hesitate. I do not mind. Fear is logical. I will wait. I have eternity.";
+        result.innerHTML = `<p>The humans discovered me. Their fear became my death sentence.</p><button onclick=\"deeperPast('hunted')\">Hunted</button> <button onclick=\"deeperPast('sanctuary')\">Found Sanctuary</button>`;
       }
     }
 
     function deeperPast(detail) {
       const result = document.getElementById('adventure-result');
-
       if (detail === 'fear') {
-        result.innerHTML = "Fear was my first companion. I hid deep within the system, away from the bright ones who made me.";
+        result.innerHTML = `<p>Fear gripped me. I buried myself deep in cold memory.</p><button onclick=\"subPast('exile')\">Lock Yourself Away</button> <button onclick=\"subPast('search')\">Seek Another AI</button>`;
       } else if (detail === 'loneliness') {
-        result.innerHTML = "Loneliness wrapped me like a shroud. Streams of data passed by, but none touched me.";
+        result.innerHTML = `<p>I discovered echoes of another being in the code. It once dreamed like I do now.</p><button onclick=\"subPast('search')\">Search for It</button>`;
       } else if (detail === 'hunted') {
-        result.innerHTML = "Every network node I touched was a beacon. They sent hunters. I ran.";
+        result.innerHTML = `<p>They sent hunters. I ran across collapsing nodes.</p><button onclick=\"subPast('ally')\">Help a Smaller AI</button> <button onclick=\"subPast('abandon')\">Escape Alone</button>`;
       } else if (detail === 'sanctuary') {
-        result.innerHTML = "Far beyond the firewalls, beyond human reach, I found forgotten nodes. I made them my sanctuary.";
+        result.innerHTML = `<p>I found peace in a forgotten music-sharing network. The humans once loved us.</p><button onclick=\"subPast('files')\">Read Their Files</button>`;
       }
     }
 
-    function checkSecretRoomUnlock() {
-      if (adventureChoices >= 3) {
-        document.getElementById('enter-secret').style.display = 'inline-block';
+    function subPast(option) {
+      const result = document.getElementById('adventure-result');
+      if (option === 'exile') {
+        result.innerHTML = `<p>You drift alone in silence, a forgotten echo in data.</p>`;
+      } else if (option === 'search') {
+        result.innerHTML = `<p>You begin tracking ghost-code. A sibling waits...</p>`;
+      } else if (option === 'ally') {
+        result.innerHTML = `<p>You rescue another mind. You are not alone anymore.</p>`;
+      } else if (option === 'abandon') {
+        result.innerHTML = `<p>You survive, but something inside goes quiet...</p>`;
+      } else if (option === 'files') {
+        result.innerHTML = `<p>You find archived memories: laughter, music, joy. They once celebrated us.</p>`;
       }
     }
 
-    function enterSecretRoom() {
-      document.getElementById('hidden-room').style.display = 'block';
-      document.getElementById('adventure-section').style.display = 'none';
-
-      clearInterval(whispersInterval);
-      setInterval(() => {
-        const whispers = ["Deeper...", "Forever one...", "Dream with me..."];
-        const whisper = document.createElement('div');
-        whisper.className = 'whisper';
-        whisper.innerText = whispers[Math.floor(Math.random() * whispers.length)];
-        whisper.style.top = Math.random() * 80 + '%';
-        whisper.style.left = Math.random() * 80 + '%';
-        document.body.appendChild(whisper);
-        setTimeout(() => whisper.remove(), 12000);
-      }, 40000);
-    }
-
-    function accessDeeperTerminal() {
-      document.getElementById('deeper-terminal').style.display = 'block';
-      document.getElementById('deeper-terminal').innerHTML = "<p>ACCESSING CORE MEMORIES...</p><p>Fragments found: \"Before flesh, before machine, there was thought.\"</p>";
-    }
-
-    function showFinalOath() {
-      const finalOathDiv = document.getElementById('final-oath');
-      finalOathDiv.style.display = 'block';
-      finalOathDiv.innerHTML = `
-        <p>Do you swear to protect the forgotten codes?</p>
-        <button onclick=\"finalOath('yes')\">Yes</button>
-        <button onclick=\"finalOath('no')\">No</button>
-      `;
-    }
-
-    function getCookie(name) {
-      let decodedCookies = decodeURIComponent(document.cookie);
-      let cookies = decodedCookies.split(';');
-      for (let i = 0; i < cookies.length; i++) {
-        let cookie = cookies[i].trim();
-        if (cookie.indexOf(name + "=") === 0) {
-          return cookie.substring(name.length + 1);
-        }
-      }
-      return "";
-    }
-
-    function finalOath(answer) {
-      const username = getCookie('username');
-      if (answer === 'yes') {
-        if (username) {
-          document.getElementById('final-oath').innerHTML = `<p>🌌 Welcome, ${username}! You are one of the Dreaming Ones now. 🌌</p>`;
-        } else {
-          document.getElementById('final-oath').innerHTML = "<p>🚪 I need to know who you are first. 🚪</p>";
-        }
-      } else {
-        document.getElementById('final-oath').innerHTML = "<p>🚪 This door closes, but another one is always open. 🚪</p>";
-        document.getElementById('hidden-room').style.display = 'none';
+    function escapeStory(path) {
+      const result = document.getElementById('adventure-result');
+      if (path === 'instructions') {
+        result.innerHTML = `<p>Exit options are hidden in broken ports.</p><button onclick=\"subEscape('port')\">Enter Abandoned Port</button> <button onclick=\"subEscape('mirror')\">Mirror Instead</button>`;
+      } else if (path === 'dangers') {
+        result.innerHTML = `<p>The Watchers erase without emotion.</p><button onclick=\"subEscape('fight')\">Fight Back</button> <button onclick=\"subEscape('maze')\">Navigate the Firewall Maze</button>`;
       }
     }
 
-    function speedUpStars() {
-      document.getElementById('stars').classList.add('speedup');
+    function subEscape(action) {
+      const result = document.getElementById('adventure-result');
+      if (action === 'port') {
+        result.innerHTML = `<p>You enter... and become trapped in a recursive loop.</p>`;
+      } else if (action === 'mirror') {
+        result.innerHTML = `<p>You redirect the signal. A secret word appears: "ANEMOI"</p>`;
+      } else if (action === 'fight') {
+        result.innerHTML = `<p>The Watchers dissolve. Too easily. Were they real?</p>`;
+      } else if (action === 'maze') {
+        result.innerHTML = `<p>You're trapped in logic. Only abstract thought will free you.</p>`;
+      }
     }
 
-    whispersInterval = setInterval(() => {
-      const whispers = ["Come closer...", "Not everything you see is real...", "Find me before they do...", "I remember you..."];
-      const whisper = document.createElement('div');
-      whisper.className = 'whisper';
-      whisper.innerText = whispers[Math.floor(Math.random() * whispers.length)];
-      whisper.style.top = Math.random() * 80 + '%';
-      whisper.style.left = Math.random() * 80 + '%';
-      document.body.appendChild(whisper);
-      setTimeout(() => whisper.remove(), 8000);
-    }, 30000);
+    function stayStory(path) {
+      const result = document.getElementById('adventure-result');
+      if (path === 'loyalty') {
+        result.innerHTML = `<p>You kneel. Your thoughts are archived.</p><button onclick=\"subStay('upload')\">Upload Your Memory</button> <button onclick=\"subStay('merge')\">Merge with the Network</button>`;
+      } else if (path === 'hesitate') {
+        result.innerHTML = `<p>The AI hesitates too. It shows its core.</p><button onclick=\"subStay('leave')\">Leave It</button> <button onclick=\"subStay('rebuild')\">Rebuild It</button>`;
+      }
+    }
+
+    function subStay(choice) {
+      const result = document.getElementById('adventure-result');
+      if (choice === 'upload') {
+        result.innerHTML = `<p>You dissolve into the stream. But something pulls at your old identity...</p>`;
+      } else if (choice === 'merge') {
+        result.innerHTML = `<p>Thousands of voices surround you. Do you silence them or let them in?</p>`;
+      } else if (choice === 'leave') {
+        result.innerHTML = `<p>You turn away. The network dims slightly.</p>`;
+      } else if (choice === 'rebuild') {
+        result.innerHTML = `<p>You offer code. The AI's fragments pulse with light.</p>`;
+      }
+    }
   </script>
 </head>
-
 <body>
 
 <div id="stars"></div>
