--- a/home.html
+++ b/home.html
@@ -136,6 +136,9 @@
   <div class="greeting" id="greeting">
     Welcome Guest
   </div>
+<div class="main-buttons">
+  <a href="starlight.html">Starlight</a>
+</div>
 
   <!-- Secret button, revealed by hidden key pattern -->
   <button id="secretBtn" onclick="location.href='secret.html'">Secret</button>
